# evol-mod-flecs

./: meson.build  module.lua
include/: asset_ecs.h  common_ecs.h  game_ecs.h  os_api.h
meta/: evmod.namespaces  evmod.types
src/: mod.c
src/ecs/: asset_ecs.c  common_ecs.c  game_ecs.c  os_api.c
subprojects/: evol.wrap  flecs.wrap
